OmniAuth & Google Maps Added

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <title>Hello World</title>
   <link rel='stylesheet' href='/stylesheets/main.css'>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL_J1ih8u1e5_TN8uG30lkWDTzwg4c5XU
+"></script>
 </head>
 <body>
 
   <%= yield %>
 
+  <script src="/javascripts/maps.js"></script>
 </body>
