--- a/views/ride_create.erb
+++ b/views/ride_create.erb
@@ -1,7 +1,47 @@
+<div class="navigation">
 
+  <button class="back-btn" id="back-button-nav">
+    <img src="/images/back-icon.png" alt="">
+  </button>
 
+</div>
 
+<div class="panel-ride">
 
+  <form action="">
 
+    <h1>Hitch a Ride</h1>
 
-<div id="map"></div>
+    <div class="input-holder">
+      <input type="text" class="ride-input" name="origin" placeholder="Choose a starting point...">
+    </div>
+
+    <div class="input-holder">
+      <label for="destination"></label>
+      <input type="text" class="ride-input" name="destination" placeholder="Choose destination">
+    </div>
+
+    <div class="input-holder">
+      <label for="when_date"></label>
+      <input type="text" class="ride-input" name="when_date" placeholder="Select date">
+    </div>
+
+    <div class="input-holder">
+      <label for="when_time"></label>
+      <input type="text" class="ride-input" name="when_time" placeholder="Select time">
+    </div>
+
+    <div class="input-holder">
+      <label for="price"></label>
+      <input type="number" class="ride-input" name="price" placeholder="How much would you like to offer?">
+    </div>
+
+    <button>Hitch a Ride</button>
+
+  </form>
+
+</div>
+
+<div id="map">
+
+</div>
