--- a/views/ride_create.erb
+++ b/views/ride_create.erb
@@ -8,7 +8,7 @@
 
 <div class="panel-ride">
 
-  <form action="">
+  <form action="/ride/create" method="post">
 
     <h1>Hitch a Ride</h1>
 
@@ -45,3 +45,6 @@
 <div id="map">
 
 </div>
+
+<script src="/javascripts/maps_current.js"></script>
+<script src="/javascripts/back-button.js"></script>
