Profile CRUD Finished

--- a/views/ride_create.erb
+++ b/views/ride_create.erb
@@ -1,6 +1,6 @@
 <div class="navigation">
 
-  <button class="back-btn" id="back-button-nav">
+  <button class="nav-btns" id="back-button-nav">
     <img src="/images/back-icon.png" alt="">
   </button>
 
@@ -12,26 +12,26 @@
 
     <h1>Hitch a Ride</h1>
 
-    <div class="input-holder">
+    <div class="ride-input-holder">
       <input type="text" class="ride-input" name="origin" placeholder="Choose a starting point...">
     </div>
 
-    <div class="input-holder">
+    <div class="ride-input-holder">
       <label for="destination"></label>
       <input type="text" class="ride-input" name="destination" placeholder="Choose destination">
     </div>
 
-    <div class="input-holder">
+    <div class="ride-input-holder">
       <label for="when_date"></label>
       <input type="text" class="ride-input" name="when_date" placeholder="Select date">
     </div>
 
-    <div class="input-holder">
+    <div class="ride-input-holder">
       <label for="when_time"></label>
       <input type="text" class="ride-input" name="when_time" placeholder="Select time">
     </div>
 
-    <div class="input-holder">
+    <div class="ride-input-holder">
       <label for="price"></label>
       <input type="number" class="ride-input" name="price" placeholder="How much would you like to offer?">
     </div>
@@ -47,4 +47,4 @@
 </div>
 
 <script src="/javascripts/maps_current.js"></script>
-<script src="/javascripts/back-button.js"></script>
+<script src="/javascripts/nav-buttons.js"></script>
