--- a/views/user_driver_dashboard.erb
+++ b/views/user_driver_dashboard.erb
@@ -1,6 +1,6 @@
 <div class="navigation">
 
-  <button class="back-btn" id="back-button-nav">
+  <button class="nav-btns" id="back-button-nav">
     <img src="/images/back-icon.png" alt="">
   </button>
 
@@ -37,4 +37,4 @@
   </div>
 </div>
 
-<script src="/javascripts/back-button.js"></script>
+<script src="/javascripts/nav-buttons.js"></script>
