--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -26,7 +26,7 @@ body {
   padding-left: 15px;
 }
 
-.navigation > button {
+.nav-btns {
   width: 35px;
   height: 35px;
   background-color: #1d1f29;
@@ -35,11 +35,16 @@ body {
   padding-top: 7px;
 }
 
-.navigation > button:hover {
+.navigation > form {
+  float: right;
+  margin-right: 15px;
+}
+
+.nav-btns:hover {
   background-color: #2d2f3d;
 }
 
-.navigation > button > img {
+.nav-btns > img {
   height: 15px;
 }
 
@@ -88,6 +93,7 @@ p {
 .page_holder {
   height: 92%;
   overflow: scroll;
+  padding: 0px 10px 0px 10px;
 }
 
 .item_holder {
@@ -98,8 +104,6 @@ p {
   margin-top: 10px;
   margin-bottom: 10px;
   overflow: auto;
-  margin-left: 10px;
-  margin-right: 10px;
 }
 
 .item_holder > p {
@@ -121,6 +125,68 @@ p {
   font-size: 1em;
   /*display: inline-block;*/
   /*width: 120px;*/
+}
+
+.input-holder {
+  height: 47px;
+  display: inline-block;
+  width: 65%;
+  background: #6956EC;
+  background: -webkit-linear-gradient(left, #6956EC, #56B2BA);
+  background: -o-linear-gradient(left, #6956EC, #56B2BA);
+  background: -moz-linear-gradient(left, #6956EC, #56B2BA);
+  background: linear-gradient(left, #6956EC, #56B2BA);
+  padding: 0px;
+}
+
+.page_holder > form > .input-holder > input {
+  width: 100%;
+  height: 45px;
+  background-color: #161823;
+  border: 0px;
+  color: white;
+  padding: 25px 20px 20px 20px;
+  font-size: 0.6em;
+}
+
+.page_holder > form > label {
+  display: inline-block;
+  width: 33%;
+  font-size: 0.8em;
+  color: #afafb3;
+  text-align: left;
+}
+
+.page_holder > form > h3 {
+  color: #afafb3;
+  font-weight: 300;
+  text-align: center;
+  font-size: 1.1em;
+  margin-top: 60px;
+}
+
+.form-button {
+  width: 100%;
+  height: 45px;
+  margin-top: 10px;
+  border-bottom: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  color: white;
+  border-radius: 3px;
+}
+
+#blue-button {
+  background-color: #0b78e3;
+  border-top: 1px solid #3391ed;
+  margin-top: 50px;
+}
+
+#red-button {
+  background-color: #ff2366;
+  border-top: 1px solid #f75486;
+  margin-bottom: 20px;
+
 }
 
 /*INDEX LIST*/
@@ -357,18 +423,6 @@ p {
   padding: 25px;
 }
 
-.input-holder {
-  width: 100%;
-  height: 47px;
-  background: #6956EC;
-  background: -webkit-linear-gradient(left, #6956EC, #56B2BA);
-  background: -o-linear-gradient(left, #6956EC, #56B2BA);
-  background: -moz-linear-gradient(left, #6956EC, #56B2BA);
-  background: linear-gradient(left, #6956EC, #56B2BA);
-  padding: 0px;
-
-}
-
 .ride-input {
   float: left;
   width: 100%;
@@ -380,7 +434,18 @@ p {
   font-size: 0.6em;
 }
 
-.input-holder > img {
+.ride-input-holder {
+  height: 47px;
+  width: 100%;
+  background: #6956EC;
+  background: -webkit-linear-gradient(left, #6956EC, #56B2BA);
+  background: -o-linear-gradient(left, #6956EC, #56B2BA);
+  background: -moz-linear-gradient(left, #6956EC, #56B2BA);
+  background: linear-gradient(left, #6956EC, #56B2BA);
+  padding: 0px;
+}
+
+.ride-input-holder > img {
   width: 20px;
   float: left;
 
