--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hello World</title>
+  <title>Hitch</title>
   <link rel='stylesheet' href='/stylesheets/main.css'>
   <script src="https://maps.googleapis.com/maps/api/js?key=<%=ENV['GOOGLEAPI']%>"></script>
 <link href='https://fonts.googleapis.com/css?family=Heebo:400,100,300,500,700,800,900' rel='stylesheet' type='text/css'>
