--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -194,11 +194,21 @@ h1 {
   margin-top: 30px;
 }
 
+.page_holder > div > h3 {
+  color: #afafb3;
+  font-weight: 300;
+  font-size: 1.2em;
+  text-align: center;
+  margin-bottom: 0px;
+  margin-top: 30px;
+}
+
 p {
   color: white;
 }
 
 .page_holder {
+  position: relative;
   height: 92%;
   overflow: scroll;
   padding: 0px 10px 0px 10px;
@@ -577,6 +587,26 @@ p {
   height: 30%;
   width: 100%;
   background-color: red;
+}
+
+.page_holder > #map {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.map_overlay {
+  position: absolute;
+  background: -moz-linear-gradient(top,  rgba(22,24,34,1) 0%, rgba(22,24,34,0) 30%, rgba(22,24,34,0) 100%);
+  background: -webkit-linear-gradient(top,  rgba(22,24,34,1) 0%,rgba(22,24,34,0) 30%,rgba(22,24,34,0) 100%);
+  background: linear-gradient(to bottom,  rgba(22,24,34,1) 0%,rgba(22,24,34,0) 30%,rgba(22,24,34,0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#161822', endColorstr='#00161822',GradientType=0 );
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 10;
 }
 
 /*SIGNUP*/
