--- a/views/index.erb
+++ b/views/index.erb
@@ -70,7 +70,7 @@
   <div id="background-video">
 
     <video playsinline autoplay muted loop id="bgvid">
-      <source src="/video/sky_diving_car.mp4" type="video/mp4">
+      <source src="/video/sky_diving_car_2.mp4" type="video/mp4">
     </video>
 
     <div id="overlay">
